Version 2.02.89 - 
==================================
  Make error message hit when preallocated memlock memory exceeded clearer.
  Use R lv_attr to indicate read-only activation of non-read-only device in lvs.
  Show read-only activation override in lvdisplay & add 4 to perms in -c.
  Add activation/read_only_volume_list to override LV permission in metadata.
  Give priority to emcpower devices with duplicate PVIDs.
  Add check for error in _adjust_policy_params() (lvextend --use-policies).
  Supports rounding of percentage (%LV, %VG...) for LV resize upward.
  Use dmeventd_lvm2_command in dmeventd plugins snapshot, raid, mirror.
  Add helper dmeventd_lvm2_command() into libdevmapper-event-lvm2 library.
  Updated documentation for dmeventd.
  Drop extra stat call before opening device.
  Reduce number of lstat calls when selecting device alias.
  Add function to inialize common structure device members.
  Always zalloc device structure during initialization.
  Fix missing thread list manipulation protection in dmeventd.
  Do not derefence lv pointer in _percent_run() function before NULL check.
  Allow empty strings for description and creation_host config fields.
  Issue deprecation warning when removing last lvm1-format snapshot.
  Reinstate support for snapshot removal with lvm1 format. (2.02.86)
  Add policy based automated repair of RAID logical volumes
  Don't allow two images to be split and tracked from a RAID LV at one time
  Don't allow size change of RAID LV that is tracking changes for a split image
  Don't allow size change of RAID sub-LVs independently
  Don't allow name change of RAID LV that is tracking changes for a split image
  Do not allow users to change the name of RAID sub-LVs independently
  Do not allow users to change permissions on RAID sub-LVs
  Support the ability to replace specific devices in a RAID array via lvconvert.
  Add activation/use_linear_target enabled by default.
  Use gcc warning options only with .c to .o compilation.