@@ -46,6 +46,9 @@ struct logical_volume {
 	struct dm_list segments;
 	struct dm_list tags;
 	struct dm_list segs_using_this_lv;
+
+	uint64_t timestamp;
+	const char *hostname;
 };
 
 uint64_t lv_size(const struct logical_volume *lv);
@@ -71,5 +74,8 @@ char *lvseg_segtype_dup(struct dm_pool *mem, const struct lv_segment *seg);
 char *lvseg_tags_dup(const struct lv_segment *seg);
 char *lvseg_devices(struct dm_pool *mem, const struct lv_segment *seg);
 char *lvseg_seg_pe_ranges(struct dm_pool *mem, const struct lv_segment *seg);
-
+char *lv_time_dup(struct dm_pool *mem, const struct logical_volume *lv);
+char *lv_host_dup(struct dm_pool *mem, const struct logical_volume *lv);
+int lv_set_creation(struct logical_volume *lv,
+		    const char *hostname, uint64_t timestamp);
 #endif /* _LVM_LV_H */
